style.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');

body {
    margin: 0;
    overflow-y: hidden;
}
button:hover {
    cursor: pointer;
}
sup {
    font-size: 1.5vw;
    font-weight: bold;
}


/* Custom Classes */

.center {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Hero */
.hero {
    height: 20vw;
    background-color: #00b300;
}
.hero-text {
    text-align: center;
    width: 100%;
    font-size: 5vw;
    font-family: "Bungee Shade", cursive;
   
    top: -2vw;
}

.main-wrapper {
    min-height: 90vw;
    background:linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
    background-size: 300%;
    animation: change 10s ease-in-out infinite;
}


/* Output */

.print-output {
    width: 24vw;
    display: inline-block;
    align-items: right;
    justify-content: right;
    font-family: "Orbitron", sans-serif;
    font-size: 4vw;
    border: 1px solid #aaa;
    background-color: #d9d9d9;
    overflow: hidden;
    
    margin: 2vw 0 0 2vw;
}


/* Input Buttons */

.input-button {
    width: 4.6vw;
    height: 3.6vw;
    font-size: 2.5vw;
    margin: 0 .8vw 1.5vw .8vw;
    border: 0px solid transparent;
    border-radius: 4px;
}
.input-button:hover {
    background-color: #bfbfbf;
}
.method-button {
    width: 4.6vw;
    height: 3.6vw;
    font-size: 2.5vw;
    margin: 0 .8vw 1.5vw .8vw;
    background-color: #264d73;
    color: #fff;
    border: 0px solid transparent;
    border-radius: 4px;
}

.method-button:hover {
    background-color: #3973ac;
}
.reset-button {
    background-color: #ff9900;
    font-size: 2.5vw;
    color: #fff;
}
.reset-button:hover {
    background-color: #cc7a00;
}

/* Calculator */

.calc-wrapper {
    display: inline-block;
    width: 28vw;
    background-color: #aaa;
    border: 0px solid #000;
    border-radius: 4%;
    margin-top: 0;
    margin-bottom: 2vw;
    box-shadow: 5px 5px 5px #595959;
}
.button-row {
    display: inline-block;
    margin-left: 1.35vw;
    border-top: 1px solid transparent;
    border-bottom: 1px solid transparent;
}
.output-wrapper {
    border-bottom: 2px solid #8c8c8c;
}
#printValueOne {
    margin-left: 1vw;
}
.cubrt-span {
    display: inline-block;
    padding-top: .15vw;
}
/* Background Animation */

@keyframes change {
    0% {
        background-position: 0 50%;
    }
    25% {
        background-position: 25%  25%;
    }
    50% {
        background-position: 60% 50%;
    }
    75% {
        background-position: 50% 70%;
    }
    100% {
        background-position: 0 50%;
    }

}

